# break_blocks

./: .gitignore  README.md  TODO.md  auto_push.sh  collect_demos.py  evaluate.py  export_onnx.py  index.html  main.py  plot_training.py  profile_cpu.py  profile_training.py  pyproject.toml  requirements.txt  train.py  train_atari_style.py  train_bc.py  train_cnn.py  train_curriculum.py  train_dqn.py
ai_training/: __init__.py
ai_training/config/: config.yaml
ai_training/env/: __init__.py  breakout_env.py  constants.py  game_simulation.py  image_env.py  simple_env.py
ai_training/expert/: __init__.py  expert_ai.py
ai_training/export/: __init__.py  to_onnx.py  validate.py
ai_training/training/: __init__.py  callbacks.py  reward.py  train.py
css/: style.css
js/: main.js
js/ai/: AIController.js  ONNXInference.js  RLAgent.js
js/config/: Constants.js
js/entities/: Ball.js  Block.js  DurableBlock.js  NormalBlock.js  Paddle.js  PowerUp.js
js/game/: Game.js  GameState.js
js/managers/: InputManager.js  SoundManager.js  StageManager.js  StorageManager.js
js/stages/: StageData.js
js/systems/: CollisionSystem.js  ParticleSystem.js  PowerUpSystem.js  ScoreSystem.js
js/ui/: HUD.js  MenuScreen.js  PauseScreen.js  RankingScreen.js
js/utils/: Utils.js
logs/: evaluations.npz
logs/PPO_1/: events.out.tfevents.1767941135.hikaru.14284.0
logs/PPO_2/: events.out.tfevents.1767941187.hikaru.48884.0
logs/PPO_3/: events.out.tfevents.1767944418.DESKTOP-02D2QIU.47364.0
logs/PPO_4/: events.out.tfevents.1767948937.DESKTOP-02D2QIU.18864.0
(+7 files in other folders)
