[project]
name = "break-blocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
]
