[project]
name = "break-blocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "onnxscript>=0.5.7",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
